tests/ui/bitfield/field_value_out_of_bounds_signed_16_8u_i16.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/bitfield/field_value_out_of_bounds_signed_16_8u_i16.rs:6:36
  |
6 | struct BitField(#[field(size = 8)] Field);
  |                                    ^^^^^ the evaluated program panicked at 'Size of the field type exceeds the specified field size of 8 bits', $DIR/tests/ui/bitfield/field_value_out_of_bounds_signed_16_8u_i16.rs:6:36
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Field as TryFrom<u8>>::Error == u8`
 --> tests/ui/bitfield/field_value_out_of_bounds_signed_16_8u_i16.rs:6:36
  |
6 | struct BitField(#[field(size = 8)] Field);
  |                                    ^^^^^ expected `u8`, found `Infallible`

error[E0277]: the trait bound `Field: TryFrom<u8>` is not satisfied
 --> tests/ui/bitfield/field_value_out_of_bounds_signed_16_8u_i16.rs:6:32
  |
6 | struct BitField(#[field(size = 8)] Field);
  |                                ^^^^-----
  |                                |   |
  |                                |   required by a bound introduced by this call
  |                                the trait `From<u8>` is not implemented for `Field`
  |
  = help: the trait `TryFrom<u8>` is not implemented for `Field`
          but trait `TryFrom<i16>` is implemented for it
  = help: for that trait implementation, expected `i16`, found `u8`
  = note: required for `u8` to implement `Into<Field>`
  = note: required for `Field` to implement `TryFrom<u8>`

error[E0277]: the trait bound `Field: From<u8>` is not satisfied
 --> tests/ui/bitfield/field_value_out_of_bounds_signed_16_8u_i16.rs:6:36
  |
6 | struct BitField(#[field(size = 8)] Field);
  |                                    ^^^^^ the trait `From<u8>` is not implemented for `Field`
  |
  = help: the trait `TryFrom<u8>` is not implemented for `Field`
          but trait `TryFrom<i16>` is implemented for it
  = help: for that trait implementation, expected `i16`, found `u8`
  = note: required for `u8` to implement `Into<Field>`
  = note: required for `Field` to implement `TryFrom<u8>`
